--- a/q1_datetime.ipynb
+++ b/q1_datetime.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "4db559e4",
    "metadata": {},
    "outputs": [],
@@ -53,10 +53,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "c9e90903",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patient vitals shape: (18250, 7)\n",
+      "Patient vitals columns: ['date', 'patient_id', 'temperature', 'heart_rate', 'blood_pressure_systolic', 'blood_pressure_diastolic', 'weight']\n",
+      "\n",
+      "Patient vitals sample:\n",
+      "         date patient_id  temperature  heart_rate  blood_pressure_systolic  \\\n",
+      "0  2023-01-01      P0001    98.389672          71                      119   \n",
+      "1  2023-01-02      P0001    98.492046          67                      117   \n",
+      "2  2023-01-03      P0001    98.790163          70                      113   \n",
+      "3  2023-01-04      P0001    98.635781          74                      117   \n",
+      "4  2023-01-05      P0001    98.051660          67                      118   \n",
+      "\n",
+      "   blood_pressure_diastolic     weight  \n",
+      "0                        84  68.996865  \n",
+      "1                        82  67.720215  \n",
+      "2                        78  67.846825  \n",
+      "3                        82  67.693993  \n",
+      "4                        83  68.228852  \n",
+      "\n",
+      "Data summary:\n",
+      "        temperature    heart_rate  blood_pressure_systolic  \\\n",
+      "count  18250.000000  18250.000000             18250.000000   \n",
+      "mean      98.660538     75.097753               118.870904   \n",
+      "std        0.569494      9.329731                 6.457522   \n",
+      "min       96.745235     55.000000               105.000000   \n",
+      "25%       98.261433     67.000000               114.000000   \n",
+      "50%       98.658390     75.000000               119.000000   \n",
+      "75%       99.062736     83.000000               124.000000   \n",
+      "max      100.876601     93.000000               133.000000   \n",
+      "\n",
+      "       blood_pressure_diastolic        weight  \n",
+      "count              18250.000000  18250.000000  \n",
+      "mean                  76.150904     67.293055  \n",
+      "std                    5.443337     13.131365  \n",
+      "min                   65.000000     40.000000  \n",
+      "25%                   72.000000     58.439629  \n",
+      "50%                   76.000000     67.571759  \n",
+      "75%                   80.000000     77.265489  \n",
+      "max                   88.000000    105.829635  \n",
+      "\n",
+      "Date range: 2023-01-01 to 2023-12-31\n",
+      "Unique patients: 50\n",
+      "Total records: 18250\n",
+      "Expected records (200 patients × 365 days): 73,000\n",
+      "Missing visits: ~54,750 records\n"
+     ]
+    }
+   ],
    "source": [
     "# Load patient vital signs data\n",
     "patient_vitals = pd.read_csv('data/patient_vitals.csv')\n",
@@ -90,60 +141,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "b4462f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatetimeIndex(['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-04',\n",
+      "               '2023-01-05', '2023-01-06', '2023-01-07', '2023-01-08',\n",
+      "               '2023-01-09', '2023-01-10',\n",
+      "               ...\n",
+      "               '2023-12-22', '2023-12-23', '2023-12-24', '2023-12-25',\n",
+      "               '2023-12-26', '2023-12-27', '2023-12-28', '2023-12-29',\n",
+      "               '2023-12-30', '2023-12-31'],\n",
+      "              dtype='datetime64[ns]', name='date', length=18250, freq=None)\n",
+      "Visits on clinic business days: 260\n",
+      "Visits on weekends: 105\n",
+      "Total unique visit dates: 365\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Convert date column to datetime\n",
-    "# patient_vitals['date'] = pd.to_datetime(patient_vitals['date'])\n",
+    "# Convert date column to datetime\n",
+    "patient_vitals['date'] = pd.to_datetime(patient_vitals['date'])\n",
     "\n",
-    "# TODO: Set datetime column as index\n",
-    "# patient_vitals = patient_vitals.set_index('date')\n",
+    "# Set datetime column as index\n",
+    "patient_vitals = patient_vitals.set_index('date')\n",
     "\n",
-    "# TODO: Extract year, month, day components from datetime index\n",
-    "# patient_vitals['year'] = None  # Extract from index\n",
-    "# patient_vitals['month'] = None  # Extract from index\n",
-    "# patient_vitals['day'] = None  # Extract from index\n",
+    "print(patient_vitals.index)\n",
     "\n",
-    "# TODO: Calculate time differences (e.g., days since first measurement)\n",
+    "# Extract year, month, day components from datetime index\n",
+    "patient_vitals['year'] = patient_vitals.index.year  # Extract from index\n",
+    "patient_vitals['month'] = patient_vitals.index.month  # Extract from index\n",
+    "patient_vitals['day'] = patient_vitals.index.day  # Extract from index\n",
+    "\n",
+    "# Calculate time differences (e.g., days since first measurement)\n",
     "# Note: Since patients start at different times, calculate days_since_start per patient\n",
-    "# Hint: To use groupby on the 'date' column, temporarily reset the index, then set it back\n",
-    "# Example: patient_vitals_reset = patient_vitals.reset_index()\n",
-    "#          Use groupby('patient_id')['date'].transform(lambda x: (x - x.min()).dt.days)\n",
-    "#          Or use groupby('patient_id').apply() to calculate days from each patient's first date\n",
-    "#          Then: patient_vitals = patient_vitals_reset.set_index('date')\n",
-    "# patient_vitals['days_since_start'] = None  # Calculate from each patient's start date\n",
+    "patient_vitals_reset = patient_vitals.reset_index()\n",
+    "patient_vitals_reset['days_since_start'] = patient_vitals_reset.groupby('patient_id')['date'].transform(lambda x: (x - x.min()).dt.days)\n",
+    "patient_vitals = patient_vitals_reset.set_index('date')\n",
     "\n",
-    "# TODO: Create business day ranges for clinic visit schedules\n",
-    "# clinic_dates = None  # Use pd.bdate_range() for clinic visits\n",
+    "# Create business day ranges for clinic visit schedules\n",
+    "clinic_dates = pd.bdate_range(start = patient_vitals.index.min(), end = patient_vitals.index.max()) \n",
     "\n",
-    "# TODO: Create date ranges with different frequencies\n",
-    "# daily_range = None  # Daily monitoring schedule\n",
-    "# weekly_range = None  # Weekly lab test schedule (Mondays)\n",
-    "# monthly_range = None  # Monthly checkup schedule\n",
+    "# Create date ranges with different frequencies\n",
+    "daily_range = pd.date_range(start = patient_vitals.index.min(), end = patient_vitals.index.max(), freq = 'D')  # Daily monitoring schedule\n",
+    "weekly_range = pd.date_range(start = patient_vitals.index.min(), end = patient_vitals.index.max(), freq = 'W-MON')  # Weekly lab test schedule (Mondays)\n",
+    "monthly_range = pd.date_range(start = patient_vitals.index.min(), end = patient_vitals.index.max(), freq = 'MS')  # Monthly checkup schedule\n",
     "\n",
-    "# TODO: Use date ranges to analyze visit patterns\n",
+    "# Use date ranges to analyze visit patterns\n",
     "# Check how many patient visits occurred on clinic business days vs weekends\n",
-    "# patient_dates_set = set(patient_vitals.index.date)\n",
-    "# clinic_dates_set = set(clinic_dates.date)\n",
-    "# visits_on_clinic_days = len(patient_dates_set & clinic_dates_set)\n",
-    "# visits_on_weekends = len(patient_dates_set) - visits_on_clinic_days\n",
-    "# print(f\"Visits on clinic business days: {visits_on_clinic_days}\")\n",
-    "# print(f\"Visits on weekends: {visits_on_weekends}\")\n",
-    "# print(f\"Total unique visit dates: {len(patient_dates_set)}\")\n",
+    "patient_dates_set = set(patient_vitals.index.date)\n",
+    "clinic_dates_set = set(clinic_dates.date)\n",
+    "visits_on_clinic_days = len(patient_dates_set & clinic_dates_set)\n",
+    "visits_on_weekends = len(patient_dates_set) - visits_on_clinic_days\n",
+    "print(f\"Visits on clinic business days: {visits_on_clinic_days}\")\n",
+    "print(f\"Visits on weekends: {visits_on_weekends}\")\n",
+    "print(f\"Total unique visit dates: {len(patient_dates_set)}\")\n",
     "\n",
-    "# TODO: Save results as 'output/q1_datetime_analysis.csv'\n",
+    "# Save results as 'output/q1_datetime_analysis.csv'\n",
     "# Create a DataFrame with datetime analysis results including:\n",
     "# - date (datetime index or column)\n",
     "# - year, month, day (extracted from datetime)\n",
     "# - days_since_start (calculated time differences)\n",
     "# - patient_id\n",
     "# - At least one original column (e.g., temperature, heart_rate)\n",
-    "# Note: When saving to CSV with index=False, you'll need to convert the index to a column first\n",
-    "# Example structure:\n",
-    "# datetime_analysis = patient_vitals[['patient_id', 'year', 'month', 'day', 'days_since_start', 'temperature']].copy()\n",
-    "# datetime_analysis.to_csv('output/q1_datetime_analysis.csv', index=False)"
+    "datetime_analysis = patient_vitals[['patient_id', 'year', 'month', 'day', 'days_since_start', 'temperature']].copy()\n",
+    "datetime_analysis = datetime_analysis.reset_index()\n",
+    "datetime_analysis.to_csv('output/q1_datetime_analysis.csv', index = False)"
    ]
   },
   {
@@ -158,28 +225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "58b0f6b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Create timezone-aware datetime (for multi-site clinical trials)\n",
-    "# utc_time = None  # Current time in UTC\n",
-    "# eastern_time = None  # Convert to US Eastern\n",
+    "# Create timezone-aware datetime (for multi-site clinical trials)\n",
+    "utc_time = pd.Timestamp.now(tz = 'UTC')  # Current time in UTC\n",
+    "eastern_time = utc_time.tz_convert('US/Eastern')  # Convert to US Eastern\n",
     "\n",
-    "# TODO: Convert between different timezones\n",
+    "# Convert between different timezones\n",
     "# Create timezone-aware DataFrame from patient_vitals\n",
-    "# patient_vitals_tz = None  # Localize to UTC\n",
-    "# patient_vitals_tz_eastern = None  # Convert to Eastern time\n",
+    "patient_vitals_tz = patient_vitals.copy()  \n",
+    "patient_vitals_tz.index = patient_vitals_tz.index.tz_localize('UTC') # Localize to UTC\n",
+    "patient_vitals_tz_eastern = patient_vitals_tz.copy()\n",
+    "patient_vitals_tz_eastern.index = patient_vitals_tz_eastern.tz_convert('US/Eastern')  # Convert to Eastern time\n",
     "\n",
-    "# TODO: Handle daylight saving time transitions\n",
+    "# Handle daylight saving time transitions\n",
     "# Create datetime that spans DST transition\n",
     "# Note: Using UTC avoids DST ambiguity issues - UTC has no daylight saving time\n",
     "# Best practice: Store data in UTC, convert to local timezones only when needed\n",
-    "# dst_date_utc = pd.Timestamp('2023-03-12 10:00:00', tz='UTC')  # UTC time avoids DST issues\n",
-    "# dst_time_eastern = dst_date_utc.tz_convert('US/Eastern')  # Convert UTC to Eastern\n",
+    "dst_date_utc = pd.Timestamp('2023-03-12 10:00:00', tz='UTC')  # UTC time avoids DST issues\n",
+    "dst_time_eastern = dst_date_utc.tz_convert('US/Eastern')  # Convert UTC to Eastern\n",
     "\n",
-    "# TODO: Document timezone operations\n",
+    "# Document timezone operations\n",
     "# Create a report string with the following sections:\n",
     "# 1. Original timezone: Describe what timezone your original data was in (or if it was naive)\n",
     "# 2. Localization method: Explain how you localized the data (e.g., tz_localize('UTC'))\n",
@@ -188,19 +257,43 @@
     "#    Note: Explain why using UTC as the base timezone avoids DST ambiguity issues\n",
     "# 5. Example: Show at least one example of a datetime before and after conversion\n",
     "# Minimum length: 200 words\n",
-    "timezone_report = \"\"\"\n",
-    "TODO: Document your timezone operations:\n",
+    "timezone_report = f\"\"\"\n",
+    "Documentation of our timezone operations:\n",
+    "\n",
     "- What timezone was your original data in?\n",
+    "    a. Before we set a timezone, our data is in a 'naive' state/format. \n",
+    "    This means that our data did not contain any timezone information at all. \n",
+    "    In turn, a time like '09:00:00' could refer to a US Eastern timezone or even a US Western timezone. \n",
+    "    We don't know.\n",
+    "\n",
     "- How did you localize the data?\n",
+    "    a. In order to localize our data, we use the 'tz_localize()' method and set our timezone to UTC, Coordinated Universal Time.\n",
+    "    We specifically localize our data here: patient_vitals_tz.index = patient_vitals_tz.index.tz_localize('UTC')\n",
+    "\n",
     "- What timezone did you convert to?\n",
+    "    a. We later converted our timezone from UTC to US Eastern using the 'tz_convert()' method.\n",
+    "    We specifically convert our data here: patient_vitals_tz_eastern.index = patient_vitals_tz_eastern.tz_convert('US/Eastern') \n",
+    "    Note that because we did not want to get rid of our UTC-localized data, we created a new eastern-focused DataFrame for patient vitals.\n",
+    "\n",
+    "\n",
     "- What issues did you encounter with DST? (Note: Using UTC avoids DST ambiguity)\n",
+    "    a. While DST (Daylight Saving Time) would normally be an issue with time data, due to 'fall back' and 'spring forward' leading to time ambiguity, we did not face any issues.\n",
+    "    The reason for this is because UTC remains constant year-round, avoiding DST entirely.\n",
+    "    In turn, conversion to other timezones, like US Eastern, can be easily made afterwards without any timezone/DST hassle.\n",
+    "    \n",
+    "\n",
     "- Include at least one example showing a datetime before and after conversion\n",
+    "    a. An example of datetime conversion before and after conversion, following DST transition time:\n",
+    "    UTC: {dst_date_utc}\n",
+    "    Eastern: {dst_time_eastern}\n",
+    "\n",
     "- Explain why UTC is recommended as the base timezone for storing temporal data\n",
+    "    a.  UTC is recommended as a base timezone for storing temporal data because it is a singular, universally accepted time format that helps avoid complications that arise from timezones and DST.\n",
     "\"\"\"\n",
     "\n",
-    "# TODO: Save results as 'output/q1_timezone_report.txt'\n",
-    "# with open('output/q1_timezone_report.txt', 'w') as f:\n",
-    "#     f.write(timezone_report)"
+    "# Save results as 'output/q1_timezone_report.txt'\n",
+    "with open('output/q1_timezone_report.txt', 'w') as f:\n",
+    "     f.write(timezone_report)"
    ]
   },
   {
@@ -222,6 +315,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
